# contraptions

./: README.md
discord-activity-bot/: .gitignore  README.md  pyproject.toml
discord-activity-bot/discord_activity_bot/: __init__.py  __main__.py  discord_api.py  formatting.py  raw_snapshot.py  scanner.py
discord-activity-bot/tests/: __init__.py  test_discord_api.py  test_formatting.py  test_main.py  test_raw_snapshot.py  test_scanner.py
github-config/: .gitignore  README.md  pyproject.toml
github-config/docs/: configuration.md  endpoint-inventory.md
github-config/examples/: policy.yaml
github-config/github_config/: __init__.py  api.py  cli.py  comments.py  config.py  display.py  endpoint_inventory.py  exporter.py  graphql.py  operations.py  planner.py  specs.py  util.py
github-config/scripts/: check_endpoint_inventory.py
github-config/tests/: fakes.py  test_api.py  test_cli.py  test_config.py  test_endpoint_inventory.py  test_exporter.py  test_operations.py  test_planner.py
github-discord-proxy/: .gitignore  README.md  config.example.ini
github-discord-proxy/github-webhook/: .htaccess  index.cgi
pingbar/: .gitignore  Makefile  README.md  local.pingbar.plist.template  main.swift
