[project]
name = "discord-activity-bot"
version = "0.1.0"
description = "Scan Discord channel message activity and print sparklines."
requires-python = ">=3.10"
dependencies = []

[project.scripts]
discord-activity-bot = "discord_activity_bot.__main__:main"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"
